--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 body {
-	background-color: red; 
+	background-image: url("200.png");
+	background-position: center
+	background-size: cover;
+
+	text-align: center;
+	font-family: 'Oswald', sans-serif;
+color: black;
+background-color: #00000;
 }
